Добавлена документация REST API, изменена openapischema.yml
